[gd_scene load_steps=5 format=3 uid="uid://bl7f025xcw5i8"]

[ext_resource type="Script" uid="uid://bfaahp4ifa2t3" path="res://scripts/falling_platform.gd" id="1_eyv7q"]
[ext_resource type="Texture2D" uid="uid://b8fau68vy81lw" path="res://assets/sprites/platform_grapes.png" id="1_rehgp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4u4ee"]
size = Vector2(32, 9)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cgkqx"]
size = Vector2(32, 4)

[node name="falling_grapesplatform" type="Sprite2D"]
texture = ExtResource("1_rehgp")
script = ExtResource("1_eyv7q")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_4u4ee")
one_way_collision = true

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_cgkqx")

[node name="FallTimer" type="Timer" parent="."]

[node name="RespawnTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="FallTimer" to="." method="_on_fall_timer_timeout"]
[connection signal="timeout" from="RespawnTimer" to="." method="_on_respawn_timer_timeout"]
